# voilk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE.md  README.md  circle.yml
example_plugins/example_api_plugin/: CMakeLists.txt  example_api_plugin.cpp
libraries/chain/: CMakeLists.txt  bears_evaluator.cpp  bears_objects.cpp  block_log.cpp  database.cpp  fork_database.cpp  generic_custom_operation_interpreter.cpp  shared_authority.cpp  smt_evaluator.cpp  transaction_object.cpp  voilk_evaluator.cpp  voilk_objects.cpp  witness_schedule.cpp
libraries/chain/include/bears/chain/: account_object.hpp  bears_evaluator.hpp  bears_object_types.hpp  bears_objects.hpp  block_log.hpp  block_summary_object.hpp  buffer_type.hpp  comment_object.hpp  compound.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  hardfork_property_object.hpp  history_object.hpp  index.hpp  node_property_object.hpp  notifications.hpp  pending_optional_action_object.hpp  pending_required_action_object.hpp  schema_types.hpp  shared_authority.hpp  shared_db_merkle.hpp  smt_objects.hpp  transaction_notification.hpp  transaction_object.hpp  witness_objects.hpp  witness_schedule.hpp
libraries/chain/include/bears/chain/schema_types/: oid.hpp
libraries/chain/include/bears/chain/smt_objects/: account_balance_object.hpp  smt_market_maker.hpp  smt_token_object.hpp
libraries/chain/include/bears/chain/util/: advanced_benchmark_dumper.hpp  asset.hpp  impacted.hpp  manabar.hpp  rd_dynamics.hpp  rd_setup.hpp  reward.hpp  signal.hpp  uint256.hpp
libraries/chain/include/voilk/chain/: account_object.hpp  block_log.hpp  block_summary_object.hpp  buffer_type.hpp  comment_object.hpp  compound.hpp  custom_operation_interpreter.hpp  database.hpp  database_exceptions.hpp  db_with.hpp  evaluator.hpp  evaluator_registry.hpp  fork_database.hpp  generic_custom_operation_interpreter.hpp  global_property_object.hpp  hardfork_property_object.hpp  history_object.hpp  index.hpp  node_property_object.hpp  notifications.hpp  pending_optional_action_object.hpp  pending_required_action_object.hpp  schema_types.hpp  shared_authority.hpp  shared_db_merkle.hpp  smt_objects.hpp  transaction_notification.hpp  transaction_object.hpp  voilk_evaluator.hpp  voilk_object_types.hpp  voilk_objects.hpp  witness_objects.hpp  witness_schedule.hpp
libraries/chain/include/voilk/chain/schema_types/: oid.hpp
libraries/chain/include/voilk/chain/smt_objects/: account_balance_object.hpp  smt_market_maker.hpp  smt_token_object.hpp
libraries/chain/include/voilk/chain/util/: advanced_benchmark_dumper.hpp  asset.hpp  impacted.hpp  manabar.hpp  rd_dynamics.hpp  rd_setup.hpp  reward.hpp  signal.hpp  uint256.hpp
libraries/chain/smt_objects/: smt_market_maker.cpp
libraries/chain/util/: advanced_benchmark_dumper.cpp  impacted.cpp  rd.cpp  reward.cpp
libraries/legacy_plugins/account_statistics/: CMakeLists.txt  account_statistics_api.cpp  account_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/account_statistics/include/bears/account_statistics/: account_statistics_api.hpp  account_statistics_plugin.hpp
libraries/legacy_plugins/account_statistics/include/voilk/account_statistics/: account_statistics_api.hpp  account_statistics_plugin.hpp
libraries/legacy_plugins/auth_util/: CMakeLists.txt  auth_util_api.cpp  auth_util_plugin.cpp  plugin.json
libraries/legacy_plugins/auth_util/include/bears/plugins/auth_util/: auth_util_api.hpp  auth_util_plugin.hpp
libraries/legacy_plugins/auth_util/include/voilk/plugins/auth_util/: auth_util_api.hpp  auth_util_plugin.hpp
libraries/legacy_plugins/block_info/: CMakeLists.txt  block_info_api.cpp  block_info_plugin.cpp  plugin.json
libraries/legacy_plugins/block_info/include/bears/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/legacy_plugins/block_info/include/voilk/plugins/block_info/: block_info.hpp  block_info_api.hpp  block_info_plugin.hpp
libraries/legacy_plugins/blockchain_statistics/: CMakeLists.txt  blockchain_statistics_api.cpp  blockchain_statistics_plugin.cpp  plugin.json
libraries/legacy_plugins/blockchain_statistics/include/bears/blockchain_statistics/: blockchain_statistics_api.hpp  blockchain_statistics_plugin.hpp
libraries/legacy_plugins/blockchain_statistics/include/voilk/blockchain_statistics/: blockchain_statistics_api.hpp  blockchain_statistics_plugin.hpp
libraries/legacy_plugins/delayed_node/: CMakeLists.txt  delayed_node_plugin.cpp  plugin.json
libraries/legacy_plugins/delayed_node/include/bears/delayed_node/: delayed_node_plugin.hpp
libraries/legacy_plugins/delayed_node/include/voilk/delayed_node/: delayed_node_plugin.hpp
libraries/legacy_plugins/private_message/: CMakeLists.txt  plugin.json  private_message_plugin.cpp
libraries/legacy_plugins/private_message/include/bears/private_message/: private_message_evaluators.hpp  private_message_operations.hpp  private_message_plugin.hpp
libraries/legacy_plugins/private_message/include/voilk/private_message/: private_message_evaluators.hpp  private_message_operations.hpp  private_message_plugin.hpp
libraries/legacy_plugins/raw_block/: CMakeLists.txt  plugin.json  raw_block_api.cpp  raw_block_plugin.cpp
libraries/legacy_plugins/raw_block/include/bears/plugins/raw_block/: raw_block_api.hpp  (+1 more)
libraries/schema/: CMakeLists.txt  schema.cpp
libraries/schema/include/bears/schema/: abstract_schema.hpp  schema.hpp  schema_impl.hpp  schema_types.hpp
libraries/schema/include/bears/schema/schema_types/: flat_map.hpp  flat_set.hpp  pair.hpp  static_variant.hpp  vector.hpp
libraries/schema/include/voilk/schema/: abstract_schema.hpp  schema.hpp  schema_impl.hpp  schema_types.hpp
libraries/schema/include/voilk/schema/schema_types/: flat_map.hpp  flat_set.hpp  pair.hpp  static_variant.hpp  vector.hpp
programs/bearsd/: CMakeLists.txt  main.cpp
programs/voilkd/: CMakeLists.txt  main.cpp
(+543 files in other folders)
